# protodef

./: README.md  pyproject.toml
src/protodef/: __init__.py  protodef.py
